tdf#129163: GC cursor table at the end of the life of an portion enumeration

Change-Id: I864c0ba9ec43a5b164bb9a118911e0507f2a538a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139778
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 2bb92469c9f6074f7d969ebe0323b623631dd3e8)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139836
Reviewed-by: Caolán McNamara <caolanm@redhat.com>